2000-04-25  Sandeep Tamhankar <sandeep@scriptics.com>

	* modules/mime/mime.test: Added a somewhat rudimentary test suite
	for TclMIME.  Found what I believe is a minor bug in the package,
	but decided not to fix it (and just let the relevant test fail)
	until I can discuss it with Brent.

2000-04-25  Eric Melski  <ericm@scriptics.com>

	* Makefile.in: Tweaked dist target to include README and
	license.terms in distributions.

2000-04-24  Brent Welch  <welch@scriptics.com>
	
	* html/html.tcl, html.test: Cleanup of procedure names in html package.
	* html/html.n:	Updates to the man page
	* htmlhtml.test: 60% through tests

2000-04-17  Brent Welch  <welch@scriptics.com>

	* html/html.tcl: Added html generation module
	* ncgi/ncgi.tcl: Fixed ncgi::reset with no query data.
	Fixed ncgi::multipart because it usually gets \r\n data

2000-04-10  Brent Welch  <welch@scriptics.com>

	* Makefile.in: restored ncgi module

2000-04-07  Eric Melski  <ericm@scriptics.com>

	* configure: 
	* configure.in: Upped version to 0.3.

2000-03-29  Eric Melski  <ericm@scriptics.com>

	* mkIndex.tcl: Added missing "== -1" to [lsearch] for package dir
	in generated pkgIndex.tcl.

2000-03-28  Eric Melski  <ericm@scriptics.com>

	* Makefile.in: Added $(srcdir)/ prefix to mkIndex.tcl call in the
	install-libraries target, so that it would find the mkIndex.tcl
	script when run outside of the source tree.  Same for man.macros
	in the install-doc target, so it would find the file.

2000-03-27  Eric Melski  <ericm@scriptics.com>

	* Makefile.in: Added dist target for building distribution.

	* configure.in: Removed mkIndex.tcl from AC_OUTPUT call.

	* mkInstallScripts.tcl: First cut at script for autogenerating
	simple INSTALL.BAT and install.sh files for tcllib distributions.

	* mkIndex.tcl: 
	* mkIndex.tcl.in: Replace mkIndex.tcl.in with mkIndex.tcl, which
	now takes more args to specify values.

2000-03-09  Eric Melski  <ericm@scriptics.com>
