@@ -7,7 +7,7 @@ AC_SUBST(CONFIGDIR)
 PACKAGE=tcllib
 
 MAJOR_VERSION=0
-MINOR_VERSION=3
+MINOR_VERSION=4
 PATCHLEVEL=
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
