@@ -29,15 +29,15 @@ set installFile [file join $outdir install.sh]
 set f [open $installFile w]
 puts $f "#!/bin/sh"
 puts $f "TCLINSTALL=/usr/local"
-puts $f "if ! \[ -d \$TCLINSTALL/lib/$package$version \] ; then \\"
+puts $f "if \[ ! -d \$TCLINSTALL/lib/$package$version \] ; then \\"
 puts $f "    mkdir -p \$TCLINSTALL/lib/$package$version ; \\"
 puts $f "fi"
-puts $f "if ! \[ -d \$TCLINSTALL/man/mann \] ; then \\"
+puts $f "if \[ ! -d \$TCLINSTALL/man/mann \] ; then \\"
 puts $f "    mkdir -p \$TCLINSTALL/man/mann ; \\"
 puts $f "fi"
 puts $f "cp -f pkgIndex.tcl \$TCLINSTALL/lib/$package$version"
 puts $f "for j in $modules ; do \\"
-puts $f "    if ! \[ -d \$TCLINSTALL/lib/$package$version/\$j \] ; then \\"
+puts $f "    if \[ ! -d \$TCLINSTALL/lib/$package$version/\$j \] ; then \\"
 puts $f "        mkdir \$TCLINSTALL/lib/$package$version/\$j ; \\"
 puts $f "    fi; \\"
 puts $f "    cp -f \$j/*.tcl \$TCLINSTALL/lib/$package$version/\$j ; \\"
